<?xml version="1.0" encoding="utf-8"?>

 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.TicketCreateFragment"
    android:paddingTop="16dp"
    android:paddingLeft="30dp"
    android:paddingRight="30dp">

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:id="@+id/txtTicketsCreate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tickets_create"
        android:textSize="28sp"
        android:textStyle="bold"
        android:gravity="center"
        />

    <com.google.android.material.textfield.TextInputLayout

        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtTicketsCreate"
        android:layout_marginTop="16dp"
        android:hint="@string/type"
        android:orientation="horizontal"
        android:id="@+id/layoutTicketType">

        <AutoCompleteTextView
            android:id="@+id/spnTicketType"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="none"
            android:textSize="18sp"
            tools:ignore="LabelFor,SpeakableTextPresentCheck,VisualLintTextFieldSize" />

    </com.google.android.material.textfield.TextInputLayout>




    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/layoutTicketType"
        android:id="@+id/layoutNameTicket"
        android:layout_marginTop="16dp"
        style="@style/Widget.Material3.TextInputLayout.OutlinedBox">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edtNameTicket"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/input_your_name"
            android:textSize="18sp"
            tools:ignore="TextContrastCheck,VisualLintTextFieldSize" />

    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnChoosePicTicket"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/layoutNameTicket"
        android:layout_marginTop="16dp"
        android:paddingLeft="15dp"
        android:background="@drawable/bg_btn"
        android:gravity="left|center"
        android:text="@string/choose_one_picture"
        android:textAllCaps="false"
        android:textSize="20sp"
        tools:ignore="RtlHardcoded,TextContrastCheck,VisualLintButtonSize" />

    <ImageView
        android:id="@+id/imgTicket"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_below="@+id/btnChoosePicTicket"
        android:layout_marginTop="16dp"
        android:background="@color/gray"
        android:contentDescription="@string/preview_picture"
        android:src="@drawable/ic_launcher_background"
        tools:ignore="ImageContrastCheck" />


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnCreateTicket"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="20dp"
        android:background="@drawable/bg_btn"
        android:text="@string/create"
        android:textAllCaps="false"
        android:textSize="20sp"
        tools:ignore="TextContrastCheck,VisualLintButtonSize" />

</RelativeLayout>